plugins {
    id 'io.spring.dependency-management' version '1.1.5'
}

ext {
    springbootMavenBomVersion = '3.2.5'
    greenMailVersion = "2.0.1"
}

group = 'se.inera.intyg.css'
version = '0.0.1-SNAPSHOT'

allprojects {
    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    sourceCompatibility = '17'
    targetCompatibility = '17'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springbootMavenBomVersion}"
        }
    }
}